--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -18,6 +18,7 @@
 			"extensions": [
 				"Vue.volar",
 				"Vue.vscode-typescript-vue-plugin",
+				"sdras.vue-vscode-snippets",
 				"csstools.postcss",
 				"bradlc.vscode-tailwindcss",
 				"esbenp.prettier-vscode"
