--- a/webapp/package.json
+++ b/webapp/package.json
@@ -10,6 +10,7 @@
         "format": "npx prettier --write ."
     },
     "dependencies": {
+        "@heroicons/vue": "^2.0.17",
         "@vue-flow/core": "^1.19.0",
         "vue": "^3.2.47"
     },
