--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,13 +28,11 @@ jobs:
         run: |
           echo "VERSION=$(npm pkg get version)" >> $GITHUB_ENV
 
-      - name: Commit updated version
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: |
-          git config --global user.name 'Florian Becker'
-          git config --global user.email 'florianb-de@users.noreply.github.com'
-          git commit -am "Automated push"
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add .
+          git commit -m "generated"
           git push
 
       - name: Create release
