--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,13 +20,13 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-      - run: npm ci
-      - run: npm version patch
+      - name: Install dependencies
+        run: npm ci
 
       - name: Set version env
         id: set_version_env
         run: |
-          echo "VERSION=$(npm pkg get version)" >> $GITHUB_ENV
+          echo "VERSION=$(npm version patch)" >> $GITHUB_ENV
 
       - run: |
           git config user.name github-actions
