--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,8 @@ jobs:
         run: |
           echo "VERSION=$(npm version patch)" >> $GITHUB_ENV
 
+      - run: echo "${{ env.Version }}"
+
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
@@ -38,4 +40,4 @@ jobs:
       - name: Create release
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        run: gh release create "$env.VERSION"
+        run: gh release create ${{ env.Version }}
