#fixed wrong variable being used

--- a/.github/workflows/draft.yml
+++ b/.github/workflows/draft.yml
@@ -44,4 +44,4 @@ jobs:
             - name: create pull-request
               env:
                   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-              run: gh pr create --title "releasing ${{ steps.create_npm_patch.outputs.VERSION  }}" --body "please approve to merge on master" --base master --head "${{ steps.create_npm_patch.outputs.VERSION  }}"
+              run: gh pr create --title "releasing ${{ steps.create_npm_patch.outputs.VERSION  }}" --body "please approve to merge on master" --base master --head "${{ github.ref  }}"
