--- a/webapp/package.json
+++ b/webapp/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.0.17",
+    "@vue-flow/background": "^1.2.0",
     "@vue-flow/core": "^1.19.0",
     "vue": "^3.2.47"
   },
