--- a/.github/workflows/draft.yml
+++ b/.github/workflows/draft.yml
@@ -21,7 +21,7 @@ jobs:
               with:
                   node-version: "18"
             - name: Install dependencies
-              run: npm ci
+              run: npm ci --force
 
             - name: Auto-format
               run: npm run format
