--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,7 +17,9 @@
         "@vue-flow/core": "^1.19.0",
         "@vue-flow/minimap": "^1.1.1",
         "dagre": "^0.8.5",
+        "openbim-components": "^1.1.5",
         "stream": "^0.0.2",
+        "three": "^0.157.0",
         "uuid": "^9.0.0",
         "vue": "^3.3.4",
         "vue-router": "^4.2.4",
@@ -26,6 +28,7 @@
     },
     "devDependencies": {
         "@types/dagre": "^0.7.48",
+        "@types/three": "^0.157.0",
         "@types/uuid": "^9.0.1",
         "@vitejs/plugin-vue": "^4.1.0",
         "autoprefixer": "^10.4.14",
